--- a/design.html
+++ b/design.html
@@ -11,10 +11,22 @@
     <h1>My Designs</h1>
 
     <main class="container">
-        <section><img src="apple.png" alt="apple" style="width: 500px; height:600px"></section>
-        <section><img src="ArtEz_Photographically_.png" alt="collage" style="width: 500px; height: 600px"></section>
-        <section><img src="cycle.png" alt="poster" style="width: 500px; height: 600px"></section>
-        <section><img src="finished packaged product .png" alt="deisgn" style="width: 500px; height: 600px"></section>
+        <div class="box1">
+            <section>
+                <p>Apple poster from a Coursera course.</p>
+                <img src="apple.png" alt="apple" style="width: 500px; height:600px"></section>
+            <section>
+                <p>Digital magazine collage project.</p>
+                <img src="collage.png" alt="collage" style="width: 500px; height: 600px"></section>
+        </div>
+        <div class="box2">
+            <section>
+                <p>Eco friendly transportation poster.</p>
+                <img src="cycle.png" alt="poster" style="width: 500px; height: 600px"></section>
+            <section>
+                <p>Eco-friendly products project.</p>
+                <img src="product.png" alt="deisgn" style="width: 500px; height: 600px"></section>
+        </div>
     </main>
 </body>
 </html>
