--- a/ju.html
+++ b/ju.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     
-    <header><h1>About Jonkoping</h1></header>
+    <header class="flexbox">
+        <h1>About Jonkoping</h1>
+    <div>
+        <ul>
+            <li>JONKOPING</li>
+            <li><a href="myportfolio.html">MY PORTFOLIO</a> </li>
+            <li>MY DESIGNS</li>
+        </ul>
+    </div>
+   </header>
     <main>
         <p>Jonkoping can be a small city for several people, but there are a lot of things that you can do.</p>
         
@@ -45,10 +54,6 @@
         <p>It also found near the lake, in the city center.</p>
         <img src="restaurant.JPG" class="restaurant"alt="photos of Jonkoping">
         </section>
-
-        <a href="myportfolio.index.html">Click here, to see some of my work! :)</a>
-
-
     </main>
 </body>
 </html>
