--- a/myportfolio.html
+++ b/myportfolio.html
@@ -12,9 +12,9 @@
       <h1>MY PORTFOLIO</h1>
       <div>
           <ul>
-              <li>ABOUT ME</li>
-              <li>HOME</li>
-              <li>DESIGNS</li>
+              <li>JONKOPING</li>
+              <li>MY PORTFOLIO</li>
+              <li><a href="design.html">DESIGNS</a> </li>
           </ul>
       </div>
     </header>
