--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 <body>
     
     <header class="flexbox">
-        <h1>ABOUT ME</h1>
+        <h1 class="headline">ABOUT ME</h1>
     <div>
         <ul>
             <li><a href="ju.html">JONKOPING</a> </li>
@@ -23,11 +23,15 @@
         <section>
          <!-- this is the main section -->
             <h2>Who am I?</h2>
+            <div class="cartoon-animation">
+                <img id="Loshi"  src="Loshi.png" alt="yellow cartoon" style="width:200px;height:200px">
+            </div>
          <p>Hello, my name is Polina and I'm a student at Jonkoping University and I'm studying New Media Design. </p> 
          <p>With my degree I want to be able to design posters or album covers.</p>
 
          <img src="meprofile.png" class="profile-image" alt="photos"> 
         </section>
+
 <section>
     <h3>Places</h3>
     <p> With my degree I want to be able to design posters or album covers.</p>
