--- a/design.html
+++ b/design.html
@@ -14,7 +14,10 @@
         <div class="box1">
             <section>
                 <p>Apple poster from a Coursera course.</p>
-                <img src="apple.png" alt="apple" style="width: 500px; height:600px"></section>
+                <img src="apple.png" alt="apple" style="width: 500px; height:600px">
+                <li><a href="detail.html">DESIGNS</a> </li>
+            </section>
+            
             <section>
                 <p>Digital magazine collage project.</p>
                 <img src="collage.png" alt="collage" style="width: 500px; height: 600px"></section>
